test/corpus/loops.txt
==================
FOR loop
==================

10 FOR I = 1 TO 10
20 PRINT I
30 NEXT I

---

(source_file
  (line_number_statement
    (number)
    (for_statement
      (identifier)
      (number)
      (number)))
  (line_number_statement
    (number)
    (print_statement
      (identifier)))
  (line_number_statement
    (number)
    (next_statement
      (identifier))))

==================
FOR loop with STEP
==================

10 FOR J = 0 TO 100 STEP 10
20 PRINT J
30 NEXT J

---

(source_file
  (line_number_statement
    (number)
    (for_statement
      (identifier)
      (number)
      (number)
      (number)))
  (line_number_statement
    (number)
    (print_statement
      (identifier)))
  (line_number_statement
    (number)
    (next_statement
      (identifier))))

==================
Nested FOR loops
==================

10 FOR I = 1 TO 3
20 FOR J = 1 TO 3
30 PRINT I; J
40 NEXT J
50 NEXT I

---

(source_file
  (line_number_statement
    (number)
    (for_statement
      (identifier)
      (number)
      (number)))
  (line_number_statement
    (number)
    (for_statement
      (identifier)
      (number)
      (number)))
  (line_number_statement
    (number)
    (print_statement
      (identifier)
      (identifier)))
  (line_number_statement
    (number)
    (next_statement
      (identifier)))
  (line_number_statement
    (number)
    (next_statement
      (identifier))))
